toolchain/internal/core/analysis/testdata/valid/annotations_valid.vdl
@entity
@meta({ owner "core" })
type User {
  @id
  id string
}

@config
const maxPageSize = 100

enum Status {
  @deprecated("Use Disabled")
  Inactive
  Active
}
