toolchain/internal/core/analysis/testdata/errors/duplicates/type_enum_same_name.vdl
// @expect: E804

type Status {
  id string
}

enum Status {
  Active
}
